<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thenewboston.calculator.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:id="@+id/seven"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:id="@+id/eight"
        android:layout_alignTop="@+id/seven"
        android:layout_toRightOf="@+id/seven"
        android:layout_toEndOf="@+id/seven" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:id="@+id/input"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backspace"
        android:id="@+id/backspace"
        android:layout_below="@+id/input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/clear"
        android:layout_toStartOf="@+id/clear" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clear"
        android:layout_below="@+id/input"
        android:layout_toRightOf="@+id/eight"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:id="@+id/nine"
        android:layout_alignTop="@+id/eight"
        android:layout_alignLeft="@+id/clear"
        android:layout_alignStart="@+id/clear" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"
        android:id="@+id/div"
        android:layout_alignTop="@+id/nine"
        android:layout_toRightOf="@+id/nine"
        android:layout_toEndOf="@+id/nine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:id="@+id/four"
        android:layout_below="@+id/seven"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:id="@+id/five"
        android:layout_alignBottom="@+id/four"
        android:layout_toRightOf="@+id/four"
        android:layout_toEndOf="@+id/four" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:id="@+id/six"
        android:layout_alignBottom="@+id/five"
        android:layout_toRightOf="@+id/five"
        android:layout_toEndOf="@+id/five" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mul"
        android:id="@+id/mul"
        android:layout_alignBottom="@+id/six"
        android:layout_toRightOf="@+id/six"
        android:layout_toEndOf="@+id/six" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:id="@+id/one"
        android:layout_below="@+id/four"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:id="@+id/two"
        android:layout_below="@+id/four"
        android:layout_toRightOf="@+id/one"
        android:layout_toEndOf="@+id/one" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:id="@+id/three"
        android:layout_below="@+id/five"
        android:layout_toRightOf="@+id/five"
        android:layout_toEndOf="@+id/five" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:id="@+id/sub"
        android:layout_below="@+id/six"
        android:layout_toRightOf="@+id/six"
        android:layout_toEndOf="@+id/six" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:id="@+id/zero"
        android:layout_below="@+id/one"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:id="@+id/dot"
        android:layout_alignBottom="@+id/zero"
        android:layout_toRightOf="@+id/zero"
        android:layout_toEndOf="@+id/zero" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eq"
        android:id="@+id/eq"
        android:layout_alignBottom="@+id/dot"
        android:layout_toRightOf="@+id/dot"
        android:layout_toEndOf="@+id/dot" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add"
        android:layout_below="@+id/three"
        android:layout_toRightOf="@+id/eq"
        android:layout_toEndOf="@+id/eq" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/returnVal"
        android:layout_below="@+id/dot"
        android:layout_marginTop="56dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="none" />

</RelativeLayout>
